[package]
name = "sdv-user"
version = "0.1.0"
authors = ["Andrew Burkett <burkett.andrew@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bstr = "0.2"
thiserror = "1"
widestring = "0.4"
winapi = {git="https://github.com/mat-gas/winapi-rs",branch="add_fltlib",features=["fltuser","winerror","handleapi"]}